Set a bunch of extension settings

--- a/rasd/config/abbrev.tex
+++ b/rasd/config/abbrev.tex
@@ -1,3 +1,4 @@
+% !TeX root = ../rasd.tex
 % Common abbrev. are set as commands to ensure proper spacing after the dot
 \RequirePackage{xspace}
 \newcommand{\ie}{i.e.\@\xspace}
