--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -190,6 +190,11 @@
 % --------------------------------------------------------------------------
 % NUMBERED CHAPTERS % Regular chapters following
 % --------------------------------------------------------------------------
+
+\chapter{Introduction}
+\input{chapters/introduction.tex}
+
+
 \chapter*{Introduction}
 
 This document is intended to be both an example of the Polimi \LaTeX{} template for Master Theses,
