--- a/rasd/config/PoliMi3i_thesis.cls
+++ b/rasd/config/PoliMi3i_thesis.cls
@@ -14,7 +14,7 @@
 %--------------------------------------------------------------------------
 %	HANDLING THE STYLE OF THE THESIS
 %--------------------------------------------------------------------------
-\LoadClass[12pt, twoside]{book} % 12 pt font, two-sided book style
+\LoadClass[12pt, oneside]{book} % 12 pt font, one-sided book style
 \RequirePackage[a4paper, includehead, headheight=0.6cm, inner=3.0cm ,outer=2.0cm, top=2.5cm, bottom=2.5cm]{geometry}
 
 \RequirePackage[bf, font=onehalfspacing]{caption} % caption: FIG in bold, 1.5 line spacing in figure and table captions
