--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -26,6 +26,7 @@
 % PACKAGES FOR TITLES
 \usepackage{titlesec}
 % \titlespacing{\section}{left spacing}{before spacing}{after spacing}
+\titlespacing{\chapter}{0pt}{3ex}{8ex}
 \titlespacing{\section}{0pt}{3.3ex}{2ex}
 \titlespacing{\subsection}{0pt}{3.3ex}{1.65ex}
 \titlespacing{\subsubsection}{0pt}{3.3ex}{1ex}
