--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -14,6 +14,9 @@
 %	REQUIRED PACKAGES AND  CONFIGURATIONS
 %------------------------------------------------------------------------------
 
+% Uncomment to show margins
+%\usepackage{showframe}
+
 % CONFIGURATIONS
 \usepackage{parskip} % For paragraph layout
 \usepackage{setspace} % For using single or double spacing
