Converted and added .doc scenarios to Latex

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -198,6 +198,8 @@
 \chapter{Introduction}
 \input{chapters/introduction.tex}
 
+\chapter{Overall Description}
+\input{chapters/overall_description.tex}
 
 \chapter*{Introduction}
 
