--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -17,6 +17,9 @@
 % Uncomment to show margins
 %\usepackage{showframe}
 
+% PACKAGE FOR CUSTOM LISTS
+\usepackage{enumitem}
+
 % CONFIGURATIONS
 \usepackage{parskip} % For paragraph layout
 \usepackage{setspace} % For using single or double spacing
