Add Software System Attributes

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -204,6 +204,9 @@
 \chapter{Overall Description}
 \input{chapters/overall_description.tex}
 
+\chapter{Specific Requirements}
+\input{chapters/specific_requirements.tex}
+
 \chapter*{Introduction}
 
 This document is intended to be both an example of the Polimi \LaTeX{} template for Master Theses,
