Re-add deleted stuff

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -17,6 +17,9 @@
 % Uncomment to show margins
 %\usepackage{showframe}
 
+% PACKAGE FOR CUSTOM LISTS
+\usepackage{enumitem}
+
 % CONFIGURATIONS
 \usepackage{parskip} % For paragraph layout
 \usepackage{setspace} % For using single or double spacing
@@ -212,6 +215,9 @@
 
 \chapter{Overall Description}
 \input{chapters/overall_description.tex}
+
+\chapter{Specific Requirements}
+\input{chapters/specific_requirements.tex}
 
 \chapter*{Introduction}
 
