--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -540,6 +540,22 @@ which supplement the main results contained in the previous chapters.
 \chapter{Appendix B}
 It may be necessary to include another appendix to better organize the presentation of supplementary material.
 
+% LIST OF FIGURES
+\listoffigures
+% LIST OF TABLES
+\listoftables
+% LIST OF SYMBOLS
+% Write out the List of Symbols in this page
+\chapter*{List of Symbols} % You have to include a chapter for your list of symbols (
+\begin{table}[H]
+    \centering
+    \begin{tabular}{lll}
+        \textbf{Variable} & \textbf{Description} & \textbf{SI unit} \\\hline\\[-9px]
+        $\bm{u}$          & solid displacement   & m                \\[2px]
+        $\bm{u}_f$        & fluid displacement   & m                \\[2px]
+    \end{tabular}
+\end{table}
+
 % ACKNOWLEDGEMENTS
 \chapter*{Acknowledgements}
 Here you might want to acknowledge someone.
