--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -147,11 +147,11 @@
 
 \puttitle{
     title=Requirement Analysis and Specification, % Title of the thesis
-    nameA=Name Surname, % Author Name and Surname
-    nameB=Name Surname, % Author Name and Surname
-    nameC=Name Surname, % Author Name and Surname
-    course=Xxxxxxx Engineering - Ingegneria Xxxxxxx, % Study Programme (in Italian)
-    academicyear={20XX-XX},  % Academic Year
+    nameA=Giacomo Orsenigo, % Author Name and Surname
+    nameB=Federico Saccani, % Author Name and Surname
+    nameC=Francesco Ferlin, % Author Name and Surname
+    course=Computer Science and Engineering, % Study Programme (in Italian)
+    academicyear={2023{-}24},  % Academic Year
 } % These info will be put into your Title page 
 
 % Define deliverable specific info
@@ -161,13 +161,13 @@
     \begin{tabu} to \textwidth { X[0.3,r,p] X[0.7,l,p] }
         \hline
 
-        \textbf{Deliverable:}   & RASD                                               \\
-        \textbf{Title:}         & Requirement Analysis and Verification Document     \\
-        \textbf{Authors:}       & YOUR NAMES                                         \\
-        \textbf{Version:}       & 1.0                                                \\
-        \textbf{Date:}          & 31-January-2016                                    \\
-        \textbf{Download page:} & LINK TO YOUR REPOSITORY                            \\
-        \textbf{Copyright:}     & Copyright © 2017, YOUR NAMES – All rights reserved \\
+        \textbf{Deliverable:}   & RASD                                                                                           \\
+        \textbf{Title:}         & Requirement Analysis and Verification Document                                                 \\
+        \textbf{Authors:}       & Giacomo Orsenigo, Federico Saccani, Francesco Ferlin                                           \\
+        \textbf{Version:}       & 0.1                                                                                            \\
+        \textbf{Date:}          & 21{-}11{-}2023                                                                                 \\
+        \textbf{Download page:} & https://github.com/Furrrlo/FerlinOrsenigoSaccani/                                              \\
+        \textbf{Copyright:}     & Copyright © 2023, Giacomo Orsenigo, Federico Saccani, Francesco Ferlin {-} All rights reserved \\
         \hline
     \end{tabu}
 \end{table}
