Try to fix some lint warnings (with poor results)

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -27,7 +27,7 @@
 \usepackage{multicol} % To write in multiple columns (executive summary)
 \setlength\columnsep{15pt} % Column separation in executive summary
 \setlength\parindent{0pt} % Indentation
-\raggedbottom  
+\raggedbottom
 
 % PACKAGES FOR TITLES
 \usepackage{titlesec}
@@ -122,7 +122,7 @@
 %----------------------------------------------------------------------------
 
 % Some utilities\ldots
-\newcommand{\comment}[1]{{\color{Red}$\blacktriangleright$ Comment: #1 $\blacktriangleleft$}}
+\newcommand{\comment}[1]{{\color{Red}\(\blacktriangleright\) Comment: #1 \(\blacktriangleleft\)}}
 \input{config/highlight}
 \input{config/abbrev}
 
