Only print puml stuff if requested

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -56,8 +56,10 @@
 \usepackage{xcolor} % Coloured captions
 \usepackage{amsthm,thmtools,xcolor} % Coloured "Theorem"
 \usepackage{float}
-\usepackage{svg} % svgs
-\pdfsuppresswarningpagegroup=1 % disable svg export warnings
+\ifdefined\emitpumldiagrams{}
+    \usepackage{svg} % svgs
+    \pdfsuppresswarningpagegroup=1 % disable svg export warnings
+\fi
 \usepackage{adjustbox} % adjust svg size to fit
  
 % STANDARD MATH PACKAGES
@@ -101,11 +103,13 @@
 %----------------------------------------------------------------------------
 
 \newcommand*{\puml}[2][]{%
-   % \immediate\write18{./puml/compile-svg.sh #2}
-   % \begin{adjustbox}{max size={\textwidth}{\textheight}}
-        % inkscapelatex false cause otherwise for some reason inkscape puts white boxes all around text
-   %     \includesvg[inkscapelatex=false #1]{#2}%
-   % \end{adjustbox}
+    \ifdefined\emitpumldiagrams{}
+        \immediate\write18{./puml/compile-svg.sh #2}
+        \begin{adjustbox}{max size={\textwidth}{\textheight}}
+            % inkscapelatex false cause otherwise for some reason inkscape puts white boxes all around text
+            \includesvg[inkscapelatex=false #1]{#2}%
+        \end{adjustbox}
+    \fi
 }
 
 % EXAMPLES OF NEW COMMANDS
