Add effort spent table

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -75,6 +75,7 @@
 \usepackage{tabularx}
 \usepackage{longtable} % Tables that can span several pages
 \usepackage{colortbl}
+\usepackage{multirow}
 
 % PACKAGES FOR ALGORITHMS (PSEUDO-CODE)
 \usepackage{algorithm}
@@ -222,6 +223,11 @@
 
 \chapter{Specific Requirements}
 \input{chapters/specific_requirements.tex}
+
+\chapter{Formal analysis using alloy}
+
+\chapter{Effort spent}
+\input{chapters/effort_spent.tex}
 
 \chapter*{Introduction}
 
