--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -108,7 +108,7 @@
         \immediate\write18{./puml/compile-svg.sh #2}
         \begin{adjustbox}{max size={\textwidth}{\textheight}}
             % inkscapelatex false cause otherwise for some reason inkscape puts white boxes all around text
-            \includesvg[inkscapelatex=false #1]{#2}%
+            \includesvg[inkscapelatex=false, #1]{#2}%
         \end{adjustbox}
     \fi
 }
