Try to export alloy diagram

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -225,6 +225,7 @@
 \input{chapters/specific_requirements.tex}
 
 \chapter{Formal analysis using alloy}
+\includegraphics[]{alloy/diagrammone.pdf}
 
 \chapter{Effort spent}
 \input{chapters/effort_spent.tex}
