Add alloy code to latex

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -80,6 +80,8 @@
 % PACKAGES FOR ALGORITHMS (PSEUDO-CODE)
 \usepackage{algorithm}
 \usepackage{algorithmic}
+\usepackage{listings}
+\usepackage{config/alloy-style}
 
 % PACKAGES FOR REFERENCES & BIBLIOGRAPHY
 \usepackage[colorlinks=true,linkcolor=black,anchorcolor=black,citecolor=black,filecolor=black,menucolor=black,runcolor=black,urlcolor=black]{hyperref} % Adds clickable links at references
@@ -225,7 +227,7 @@
 \input{chapters/specific_requirements.tex}
 
 \chapter{Formal analysis using alloy}
-\includegraphics[]{alloy/diagrammone.pdf}
+\input{chapters/alloy.tex}
 
 \chapter{Effort spent}
 \input{chapters/effort_spent.tex}
