Add iif to alloy style

--- a/rasd/config/alloy-style.sty
+++ b/rasd/config/alloy-style.sty
@@ -25,6 +25,7 @@
     {!in}{{{\color[HTML]{2835C0}{$\not\in$}}}}1
     {\\in}{{{\color[HTML]{2835C0}{$\in$}}}}1
     {=>}{{{\color[HTML]{2835C0}{$\implies$}}}}2
+    {<=>}{{{\color[HTML]{2835C0}{$\Leftrightarrow$}}}}3
     % the following isn't actually Alloy, but it gives the option to produce nicer latex
     {|=>}{{{\color[HTML]{2835C0}{$\Rightarrow$}}}}2
     {<=set}{{{\color[HTML]{2835C0}{$\subseteq$}}}}1
