Add enum as an alloy keyword

--- a/rasd/config/alloy-style.sty
+++ b/rasd/config/alloy-style.sty
@@ -5,7 +5,7 @@
 \lstdefinelanguage{alloy}{
   keywords={%
       assert, pred, all, no, lone, one, some, check, run,
-      but, let, implies, not, iff, in, and, or, set, sig, Int, int,
+      but, let, implies, not, iff, in, and, or, set, sig, enum, Int, int,
       if, then, else, exactly, disj, fact, fun, module, abstract,
       extends, open, none, univ, iden, seq,
       for, as, sum,
