Fix typo in \comment command

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -129,7 +129,7 @@
 %----------------------------------------------------------------------------
 
 % Some utilities\ldots
-\newcommand{\comment}[1]{{\color{Red}\(\blacktriangleright\) Comment: #1 \(\blacktriangleleft\)}}
+\newcommand{\comment}[1]{{\color{red}\(\blacktriangleright\) Comment: #1 \(\blacktriangleleft\)}}
 \input{config/highlight}
 \input{config/abbrev}
 
