Add external software and interfaces

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -232,6 +232,9 @@
 \chapter{Effort spent}
 \input{chapters/effort_spent.tex}
 
+\chapter{References}
+\input{chapters/references.tex}
+
 \chapter*{Introduction}
 
 This document is intended to be both an example of the Polimi \LaTeX{} template for Master Theses,
