Add performance requirements

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -76,6 +76,7 @@
 \usepackage{longtable} % Tables that can span several pages
 \usepackage{colortbl}
 \usepackage{multirow}
+\setlength\LTpost{-3.5em}
 
 % PACKAGES FOR ALGORITHMS (PSEUDO-CODE)
 \usepackage{algorithm}
