--- a/rasd/bibliography.bib
+++ b/rasd/bibliography.bib
@@ -1,224 +1,70 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
-% Encoding: UTF-8
-
-@article{knuth74,
-    author = {Knuth, Donald E.},
-    title = {Computer Programming As an Art},
-    journal = {Commun. ACM},
-    year = {1974},
-    pages = {667--673},
-    numpages = {7},
-    publisher = {ACM},
-    address = {New York, NY, USA}
+@online{Git,
+  key = {Git},
+  url = {https://git-scm.com/}
 }
 
-@article{knuth92,
-    author = {Knuth, Donald E.},
-    title = {Two notes on notation},
-    journal = {Amer. Math. Monthly},
-    volume = {99},
-    year = {1992},
-    pages = {403--422}
+@online{EmbeddingGit,
+  title  = {{Pro Git} - Appendix B: Embedding {Git} in your Applications},
+  author = {Scott Chacon and Ben Straub},
+  year   = 2014,
+  note   = {URLs: \url{https://git-scm.com/book/en/v2/Appendix-B%3A-Embedding-Git-in-your-Applications-Command-line-Git}, 
+            \url{https://git-scm.com/book/en/v2/Appendix-B%3A-Embedding-Git-in-your-Applications-Libgit2}, 
+            \url{https://git-scm.com/book/it/v2/Appendice-B%3A-Embedding-Git-in-your-Applications-JGit} and 
+            \url{https://git-scm.com/book/en/v2/Appendix-B%3A-Embedding-Git-in-your-Applications-go-git}, 
+            visited 13/12/2023 }
 }
 
-@book{lamport94,
-    title = {LaTeX: A Document Preparation System},
-    author = {Lamport, Leslie},
-    year = {1994},
-    publisher = {Pearson Education India}
+@online{JGit,
+  key = {JGit},
+  url = {https://www.eclipse.org/jgit/}
 }
 
-@article{article,
-  author  = {Peter Adams}, 
-  title   = {The title of the work},
-  journal = {The name of the journal},
-  year    = 1993,
-  number  = 2,
-  pages   = {201-213},
-  month   = 7,
-  note    = {An optional note}, 
-  volume  = 4
+@online{GraphQL,
+  key = {GraphQL},
+  url = {https://www.eclipse.org/jgit/}
 }
 
-@book{book,
-  author    = {Peter Babington}, 
-  title     = {The title of the work},
-  publisher = {The name of the publisher},
-  year      = 1993,
-  volume    = 4,
-  series    = 10,
-  address   = {The address},
-  edition   = 3,
-  month     = 7,
-  note      = {An optional note},
-  isbn      = {3257227892}
+@online{GitHub,
+  key = {GitHub},
+  url = {https://github.com/}
 }
 
-@booklet{booklet,
-  title        = {The title of the work},
-  author       = {Peter Caxton}, 
-  howpublished = {How it was published},
-  address      = {The address of the publisher},
-  month        = 7,
-  year         = 1993,
-  note         = {An optional note}
+@online{GitHubSSH,
+  key = {GitHub SSH authentication},
+  url = {https://docs.github.com/en/authentication/connecting-to-github-with-ssh}
 }
 
-@conference{conference,
-  author       = {Peter Draper}, 
-  title        = {The title of the work},
-  booktitle    = {The title of the book},
-  year         = 1993,
-  editor       = {The editor},
-  volume       = 4,
-  series       = 5,
-  pages        = 213,
-  address      = {The address of the publisher},
-  month        = 7,
-  organization = {The organization},
-  publisher    = {The publisher},
-  note         = {An optional note}  
+@online{GitHubGraphQL,
+  key = {GitHub GraphQL API},
+  url = {https://docs.github.com/en/graphql}
 }
 
-@inbook{inbook,
-  author       = {Peter Eston}, 
-  title        = {The title of the work},
-  chapter      = 8,
-  pages        = {201-213},
-  publisher    = {The name of the publisher},
-  year         = 1993,
-  volume       = 4,
-  series       = 5,
-  address      = {The address of the publisher},
-  edition      = 3,
-  month        = 7,
-  note         = {An optional note}
+@online{GitHubRest,
+  key = {GitHub Rest API},
+  url = {https://docs.github.com/en/rest?apiVersion=2022-11-28}
 }
 
-@incollection{incollection,
-  author       = {Peter Farindon}, 
-  title        = {The title of the work},
-  booktitle    = {The title of the book},
-  publisher    = {The name of the publisher},
-  year         = 1993,
-  editor       = {The editor},
-  volume       = 4,
-  series       = 5,
-  chapter      = 8,
-  pages        = {201-213},
-  address      = {The address of the publisher},
-  edition      = 3,
-  month        = 7,
-  note         = {An optional note}
+@misc{WikipediaStaticAnalysis,
+  author       = {{Wikipedia contributors}},
+  title        = {List of tools for static code analysis --- {Wikipedia}{,} The Free Encyclopedia},
+  year         = {2023},
+  howpublished = {\url{https://en.wikipedia.org/w/index.php?title=List_of_tools_for_static_code_analysis&oldid=1189383292}},
+  note         = {[Online; accessed 13-December-2023]}
 }
 
-@manual{manual,
-  title        = {The title of the work},
-  author       = {Peter Gainsford}, 
-  organization = {The organization},
-  address      = {The address of the publisher},
-  edition      = 3,
-  month        = 7,
-  year         = 1993,
-  note         = {An optional note}
+@online{GhStaticAnalysis,
+  title   = {A curated list of static analysis ({SAST}) tools and linters},
+  key     = {SAST},
+  url     = {https://github.com/analysis-tools-dev/static-analysis},
+  urldate = {13-December-2023}
 }
 
-@mastersthesis{mastersthesis,
-  author       = {Peter Harwood}, 
-  title        = {The title of the work},
-  school       = {The school of the thesis},
-  year         = 1993,
-  address      = {The address of the publisher},
-  month        = 7,
-  note         = {An optional note}
+@online{SonarQube,
+  key = {SonarQube},
+  url = {https://www.sonarsource.com/products/sonarqube/}
 }
 
-@misc{misc,
-  author       = {Peter Isley}, 
-  title        = {The title of the work},
-  howpublished = {How it was published},
-  month        = 7,
-  year         = 1993,
-  note         = {An optional note}
-}
-
-@phdthesis{phdthesis,
-  author       = {Peter Joslin}, 
-  title        = {The title of the work},
-  school       = {The school of the thesis},
-  year         = 1993,
-  address      = {The address of the publisher},
-  month        = 7,
-  note         = {An optional note}
-}
-
-@proceedings{proceedings,
-  title        = {The title of the work},
-  year         = 1993,
-  editor       = {Peter Kidwelly},
-  volume       = 4,
-  series       = 5,
-  address      = {The address of the publisher},
-  month        = 7,
-  organization = {The organization},
-  publisher    = {The name of the publisher},
-  note         = {An optional note}
-}
-
-@techreport{techreport,
-  author       = {Peter Lambert}, 
-  title        = {The title of the work},
-  institution  = {The institution that published},
-  year         = 1993,
-  number       = 2,
-  address      = {The address of the publisher},
-  month        = 7,
-  note         = {An optional note}
-}
-
-@unpublished{unpublished,
-  author       = {Peter Marcheford}, 
-  title        = {The title of the work},
-  note         = {An optional note},
-  month        = 7,
-  year         = 1993
-}
-
-@online{online,
-  author       = {MultiMedia LLC}, 
-  title        = {{MS Windows NT} Kernel Description},
-  year         = 1999,
-  url          = {http://www.whateveritis.com},
-  urldate      = {2010-09-30}
-}
-
-@patent{edison,
-    title      = {Electric distribution system},
-    author     = {Edison, Thomas A.},
-    number     = {266793},
-    type       = {patentus},
-    date       = {1882-10-31}
-}
-
-@article{oetiker1995not,
-  title={The not so short introduction to LATEX2$\varepsilon$},
-  author={Oetiker, Tobias and Partl, Hubert and Hyna, Irene and Schlegl, Elisabeth},
-  journal={Electronic document available at http://www. tex. ac. uk/tex-archive/info/lshort},
-  year={1995},
-  publisher={Citeseer}
-}
-
-@book{kottwitz2015latex,
-  title={LaTeX Cookbook},
-  author={Kottwitz, Stefan},
-  year={2015},
-  publisher={Packt Publishing Ltd}
-}
-
-@misc{bibtex,
-  author       = {CTAN}, 
-  title        = {{B}i{B}{T}e{X} Documentation},
-  url          = {https://ctan.org/topic/bibtex-doc},
-  year         = {2017}
+@online{SonarQubeExt,
+  key = {SonarQube Web API},
+  url = {https://docs.sonarsource.com/sonarqube/latest/extension-guide/web-api/}
 }
