--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -85,6 +85,7 @@
 \usepackage{config/alloy-style}
 
 % PACKAGES FOR REFERENCES & BIBLIOGRAPHY
+\PassOptionsToPackage{hyphens}{url}
 \usepackage[colorlinks=true,linkcolor=black,anchorcolor=black,citecolor=black,filecolor=black,menucolor=black,runcolor=black,urlcolor=black]{hyperref} % Adds clickable links at references
 \usepackage{cleveref}
 \usepackage[square, numbers, sort&compress]{natbib} % Square brackets, citing references with numbers, citations sorted by appearance in the text and compressed
@@ -253,9 +254,6 @@
 
 \chapter{Effort spent}
 \input{chapters/effort_spent.tex}
-
-\chapter{References}
-\input{chapters/references.tex}
 
 %-------------------------------------------------------------------------
 %	BIBLIOGRAPHY
