Fix document intro table

--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -192,7 +192,7 @@
         \hline
 
         \textbf{Deliverable:}   & RASD                                                                                           \\
-        \textbf{Title:}         & Requirement Analysis and Verification Document                                                 \\
+        \textbf{Title:}         & Requirement Analysis and Specification Document                                                \\
         \textbf{Authors:}       & Giacomo Orsenigo, Federico Saccani, Francesco Ferlin                                           \\
         \textbf{Version:}       & 0.1                                                                                            \\
         \textbf{Date:}          & 21{-}11{-}2023                                                                                 \\
