Added Document structures + Overview

--- a/dd/dd.tex
+++ b/dd/dd.tex
@@ -238,6 +238,26 @@
 % --------------------------------------------------------------------------
 % NUMBERED CHAPTERS % Regular chapters following
 % --------------------------------------------------------------------------
+\chapter{Introduction}
+\input{chapters/introduction.tex}
+
+\chapter{Architectural Design}
+\input{chapters/architectural_design.tex}
+
+\chapter{User Interface Design}
+\input{chapters/user_interface_design.tex}
+
+\chapter{Requirements Treceability}
+\input{chapters/requirements_traceability.tex}
+
+\chapter{Implementation, Integration and Test Plan}
+\input{chapters/implementation_integration_testplan.tex}
+
+\chapter{Effert Spent}
+\input{chapters/effort_spent.tex}
+
+\chapter{References}
+\input{chapters/refrences.tex}
 
 %-------------------------------------------------------------------------
 %	BIBLIOGRAPHY
