Add architectural styles & design decisions

--- a/dd/bibliography.bib
+++ b/dd/bibliography.bib
@@ -18,3 +18,8 @@
   url = {https://grpc.io/}
 }
 
+@online{gRPCPrinciples,
+  key = {gRPC Principles \& Requirements},
+  url = {https://grpc.io/blog/principles/#services-not-objects-messages-not-references}
+}
+
