Add some refences

--- a/dd/bibliography.bib
+++ b/dd/bibliography.bib
@@ -28,3 +28,47 @@
   url = {https://grpc.io/blog/principles/#services-not-objects-messages-not-references}
 }
 
+@online{SpringCloudGateway,
+  key = {Spring Cloud Gateway},
+  url = {https://spring.io/projects/spring-cloud-gateway/}
+}
+
+@online{Reactor,
+  key = {Project Reactor},
+  url = {https://projectreactor.io/}
+}
+
+@online{Jenkins,
+  key = {Jenkins},
+  url = {https://www.jenkins.io/}
+}
+
+@online{JenkinsScale,
+  key = {Jenkins scaling architecture},
+  url = {https://www.jenkins.io/doc/book/scaling/architecting-for-scale/}
+}
+
+@online{SpringBoot,
+  key = {Spring Boot},
+  url = {https://spring.io/projects/spring-boot/}
+}
+
+@online{SpringAMQP,
+  key = {Spring AMQP},
+  url = {https://spring.io/projects/spring-amqp/}
+}
+
+@online{RabbitMQ,
+  key = {RabbitMQ},
+  url = {https://rabbitmq.com/}
+}
+
+@online{EC2,
+  key = {Amazon EC2},
+  url = {https://aws.amazon.com/it/ec2/}
+}
+
+@online{VPC,
+  key = {Amazon VPC},
+  url = {https://aws.amazon.com/it/vpc/}
+}
