--- a/dd/bibliography.bib
+++ b/dd/bibliography.bib
@@ -1,3 +1,8 @@
+@online{WebPushApi,
+  key = {Web Push API on MDN},
+  url = {https://developer.mozilla.org/en-US/docs/Web/API/Push_API}
+}
+
 @online{SonarCloudGh,
   key = {SonarCloud GitHub},
   url = {https://next.sonarqube.com/sonarqube/web_api/api/alm_integrations/import_github_project}
