Add load balancer description

--- a/dd/bibliography.bib
+++ b/dd/bibliography.bib
@@ -72,3 +72,8 @@
   key = {Amazon VPC},
   url = {https://aws.amazon.com/it/vpc/}
 }
+
+@online{ELB,
+  key = {Amazon ELB},
+  url = {https://aws.amazon.com/it/elasticloadbalancing/}
+}
