--- a/rasd/rasd.tex
+++ b/rasd/rasd.tex
@@ -191,13 +191,13 @@
     \begin{tabu} to \textwidth { X[0.3,r,p] X[0.7,l,p] }
         \hline
 
-        \textbf{Deliverable:}   & RASD                                                                                           \\
-        \textbf{Title:}         & Requirement Analysis and Specification Document                                                \\
-        \textbf{Authors:}       & Giacomo Orsenigo, Federico Saccani, Francesco Ferlin                                           \\
-        \textbf{Version:}       & 1.1                                                                                            \\
-        \textbf{Date:}          & 06{-}01{-}2024                                                                                 \\
-        \textbf{Download page:} & https://github.com/Furrrlo/FerlinOrsenigoSaccani/                                              \\
-        \textbf{Copyright:}     & Copyright © 2023, Giacomo Orsenigo, Federico Saccani, Francesco Ferlin {-} All rights reserved \\
+        \textbf{Deliverable:}   & RASD                                                                                                \\
+        \textbf{Title:}         & Requirement Analysis and Specification Document                                                     \\
+        \textbf{Authors:}       & Giacomo Orsenigo, Federico Saccani, Francesco Ferlin                                                \\
+        \textbf{Version:}       & 1.1                                                                                                 \\
+        \textbf{Date:}          & 06{-}01{-}2024                                                                                      \\
+        \textbf{Download page:} & https://github.com/Furrrlo/FerlinOrsenigoSaccani/                                                   \\
+        \textbf{Copyright:}     & Copyright © 2023-2024, Giacomo Orsenigo, Federico Saccani, Francesco Ferlin {-} All rights reserved \\
         \hline
     \end{tabu}
 \end{table}
